# pydicm

./: .gitmodules  README.md  pyproject.toml  setup.py
examples/: dummy.py
pydicm/: __init__.py  lowlevel.py
